src/styles.styl
.tooltip {
  background: #1496bb
  color: #fff
  pointer-events: none
  position: absolute
  top: 200px
  left: 200px
  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28)
  font-family: 'Nanum Pen Script', cursive
  font-size: 24px
  padding: 4px 7px
  border-radius: 4px
  opacity: 0
  margin-top: -52px
  transform: translate(-50%)
  transition: all 0.5s

  &.show {
    opacity: 1
  }
}

.tooltip:after {
  border-left: solid transparent 10px
  border-right: solid transparent 10px
  border-top: solid #1496bb 10px
  bottom: -10px
  margin-left: -10px
  content: ""
  height: 0
  left: 50%
  position: absolute
  width: 0
}

.tag-link {
  background-color: paleturquoise
  border-radius: 4px
  cursor: pointer
  transition: opacity 0.4s

  &:hover {
    opacity: .6
  }
}

.nodes text {
  text-shadow: 0 0 2px gray
  cursor: pointer
  text-anchor: middle
  fill: white
  font-family: 'Nanum Pen Script', cursive
}

.username {
  cursor: pointer
  list-style-type: none
}

